crates/analyzer/tests/snapshots/errors__ctx_missing_internal_call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `bar` expects 1 argument, but 0 were provided
  ┌─ compile_errors/ctx_missing_internal_call.fe:4:12
  │
4 │     pub fn bar(ctx: Context) -> u256 {
  │            ^^^ expects 1 argument
  ·
9 │         self.favorite_number = bar()
  │                                   -- supplied 0 arguments


